implement custom variable support

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "handlebars": "^4.0.6",
     "inquirer": "^3.0.5",
     "istextorbinary": "^2.1.0",
+    "lodash": "^4.17.4",
     "metalsmith": "^2.3.0",
     "open": "0.0.5",
     "to-camel-case": "^1.0.0",
